commit-7 подминил страницу-html и файлы-js

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>13.02.02 - интерфейсы</title>
 </head>
 <body>
-<h1>Hello, from Netology!</h1>
-<img src="img/netology.svg" alt="Netology Logo">
+    <h1>13.02.02 - интерфейсы</h1>
+
+    <ul>
+        <li>Сериал "Тайны Смолвиля" получат анимационное продолжение</li>
+        <li>Рок-группа петербурских медиков выпустила клип о работе в пандемию</li>
+        <li>Режисер Петрунь приступил к съёмкам сериала о Фаине Раневской</li>
+        <li>Студия Disney выбрала на роль новой Белоснежки Рейчел Зеглер</li>
+        <li>Apple заказала мультсериал по веб-комиксу "Странная планета" про инопланетян</li>
+    </ul>
+    <script src="js/app.js"></script>
+    <script src="js/app_.js" type="module"></script>
+    <!-- Всё равно не понятно почему без WebPack ошибку выдаёт: type="module". -->
 </body>
 </html>
